--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,281 +1,337 @@
 :root {
     --color-primary: #002366;
-    --color-white: #FFFFFF;
-    --color-yellow: #FFB319;
+    --color-white: #ffffff;
+    --color-yellow: #ffb319;
     --color-black: #000000;
-    --color-gray: #F3F1F5;
-    --color-red: #FF0000;
-    
-  }
+    --color-gray: #f3f1f5;
+    --color-red: #ff0000;
+}
 
+/* Reset HTML and Style */
 
-  /* Reset HTML and Style */
-  
-  body{
+body {
     overflow-x: hidden;
-  }
-  
-  * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-  }
+}
 
-  section {
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+section {
     margin-top: 1rem;
-  }
+}
 
-  a {
+a {
     text-decoration: none;
     font-weight: 500;
-  }
+}
 
-  .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
-    margin: 0!important;
+
+
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0 !important;
     font-weight: 500;
     line-height: 1.2;
-  }
+}
 
-  a:hover {
-    color: var(--color-yellow) ;
-  }
-  
+a:hover {
+    color: var(--color-yellow);
+}
 
-  .title-container {
+.title-container {
     margin-top: 2em;
-  }
+}
 
-  .title-line {
-      width: 250px;
-      border-top: 4px solid var(--color-yellow);
-      margin-left: auto;
-      margin-right: auto; 
-  }
+.title-line {
+    width: 250px;
+    border-top: 4px solid var(--color-yellow);
+    margin-left: auto;
+    margin-right: auto;
+}
 
-  .bg-main {
+.bg-main {
     background-color: var(--color-primary);
-  }
+}
 
-  .bg-gray {
+.bg-gray {
     background-color: var(--color-gray);
-  }
+}
 
-  .btn-outline-read {
+.btn-outline-read {
     border: 1px solid var(--color-primary);
     color: var(--color-primary);
-  }
-  
-  .btn-outline-read:hover {
+}
+
+.btn-outline-read:hover {
     background-color: var(--color-primary);
     color: var(--color-white);
-  }
+}
 
+/* Reset Bootsrap */
 
-
-  /* Reset Bootsrap */
-
-  .row>* {
+.row > * {
     padding: 0;
-  }
+}
 
-  .bg-primary {
-    background-color: var(--color-primary)!important;
-  }
+.bg-primary {
+    background-color: var(--color-primary) !important;
+}
 
-  .card {
+.card {
     border-radius: 1.5em;
     border: none;
-  }
+}
 
-  
 
-  
-
-  
 /* Navbar */
-    
-    .navbar {
-      background: var(--color-primary) ;
-    }
-    
-    .navbar-toggler {
-      background: var(--color-white) ;
-      border: none;
-      padding: 10px 6px;
-      outline: none;
-    }
-    
-    .navbar-toggler span {
-      display: block;
-      width: 22px;
-      height: 2px;
-      border: 1px;
-      background: var(--color-white) ;
-    }
-    
-    .navbar-toggler span + span {
-      margin-top: 4px;
-      width: 18px;
-      margin-left: 4px;
-    }
-    
-    .navbar-toggler span + span + span {
+
+.navbar {
+    background: var(--color-primary);
+}
+
+.navbar-toggler {
+    background: var(--color-white);
+    border: none;
+    padding: 10px 6px;
+    outline: none;
+}
+
+.navbar-toggler span {
+    display: block;
+    width: 22px;
+    height: 2px;
+    border: 1px;
+    background: var(--color-white);
+}
+
+.navbar-toggler span + span {
+    margin-top: 4px;
+    width: 18px;
+    margin-left: 4px;
+}
+
+.navbar-toggler span + span + span {
     width: 10px;
     margin-left: 10px;
-    
-    }
-    
-    .navbar-expand-lg .navbar-nav .nav-link {
-      padding: 2rem 1.2rem;
-      font-size: 1.4rem;
-      position: relative;
-    }
-    
-    .navbar-expand-lg .navbar-nav .nav-link:hover {
-      border-top: 2px solid var(--color-yellow);
-      color: var(--color-yellow) ;
-    }
-    
-    .navbar-expand-lg .navbar-nav .nav-link.active {
-      border-top: 2px solid var(--color-yellow);
-      color: var(--color-primary) ;
-    }
+}
+
+.navbar-expand-lg .navbar-nav .nav-link {
+    padding: 2rem 1.2rem;
+    font-size: 1.4rem;
+    position: relative;
+}
+
+.navbar-expand-lg .navbar-nav .nav-link:hover {
+    border-top: 2px solid var(--color-yellow);
+    color: var(--color-yellow);
+}
+
+.navbar-expand-lg .navbar-nav .nav-link.active {
+    border-top: 2px solid var(--color-yellow);
+    color: var(--color-primary);
+}
 
 /* Akhir Navbar */
-  
-  
-  .home{
+
+.home {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-flow: column;
-    background:url(aset/smkn1smd.png) no-repeat;
+    background: url(aset/smkn1smd.png) no-repeat;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
     position: relative;
     text-align: center;
     height: 700px;
-  }
+}
 
+.nav-link:hover {
+    color: var(--color-yellow);
+}
 
-  
-  .nav-link:hover {
-    color: var(--color-yellow) ;
-  }
-  
-  .nav-item1 {
+.nav-item1 {
     margin-left: 100px;
-  }
-  
-  .nav-item1 a:hover {
-    color: var(--color-white) ;
-    
-  }
-  .banner-image {
+}
+
+.nav-item1 a:hover {
+    color: var(--color-white);
+}
+.banner-image {
     background-image: url(aset/smkn1smd.png);
     background-size: cover;
-  
-  }
+}
 
-  
-  
-  
-  
+/* Akhir */
+
 /* Sambutan */
 
-   
-
-   .sambutan h2 {
+.sambutan h2 {
     color: var(--color-primary);
-  }
-  
-   .wrapper-content-sambutan {
-    display: flex!important;
+}
+
+.wrapper-sambutan {
+    justify-content: center;
+}
+
+.wrapper-content-sambutan {
+    display: flex !important;
     flex-direction: column;
     justify-content: center;
-   }
+}
 
-   .card-principal {
-     width: 18rem;
-   }
-  
+.card-principal {
+    width: 18rem;
+}
+
 /* akhir sambutan */
 
-  
-  
- 
-  
-  
-  
 /* Jurusan */
-  .jurusan {
+.jurusan {
     background-color: var(--color-grey);
-  }
-  
-  .jurusan h2 {
+}
+
+.jurusan h2 {
     color: var(--color-primary);
-  }
-  
-  .wrapper-jurusan {
+}
+
+.wrapper-jurusan {
     display: grid;
-    grid-template-columns: repeat(5,1fr);
+    grid-template-columns: repeat(5, 1fr);
     place-content: center;
     gap: 1em;
     justify-content: center;
-    
+}
+
+.flip-card {
+    background-color: transparent;
+    width: 300px;
+    height: 200px;
+    perspective: 1000px; /*Remove this if you don't want the 3D effect */
   }
   
-  .card-jurusan {
-    justify-self: center ;
+  /* This container is needed to position the front and back side */
+  .flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+  }
+  
+  /* Do an horizontal flip when you move the mouse over the flip box container */
+  .flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+  }
+  
+  /* Position the front and back side */
+  .flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden; /* Safari */
+    backface-visibility: hidden;
+    border-radius: 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    
   }
   
+  /* Style the front side (fallback if image is missing) */
+  .flip-card-front {
+    background-color: var(--color-primary);
+  }
+  
+  /* Style the back side */
+  .flip-card-back {
+    background-color: var(--color-primary);
+    color: white;
+    transform: rotateY(180deg);
+  }
 
-  .logo-jurusan {
+  .title-card-jurusan {
+      font-size: 1.5rem;
+  }
+
+
+.card-jurusan {
+    justify-self: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.logo-jurusan {
     width: 9rem;
-    padding: 0 0 0 0.5rem;
-    
-  }
+}
 
-  .title-jurusan {
+.title-jurusan {
     font-size: 3rem;
-    color: var(--color-white)!important;
-  }
+    color: var(--color-white) !important;
+}
 
 /* Akhir Jurusan */
-  
- 
-  
- /* Berita  */
- 
-  .berita {
-    min-height: 700px;
-  }
 
-  .thumbnail-hot-news {
-    max-width: 100%;
+/* Berita  */
+
+.berita {
+    min-height: 700px;
+}
+
+.thumbnail-hot-news {
+    width: 100%;
     height: 100%;
     background-position: center;
     background-size: cover;
-  }
+    object-fit: cover;
+}
 
-  .wrapper-card-news {
+.title-hot-news {
+    font-size: 2rem!important;
+}
+
+.wrapper-card-news {
     gap: 1rem;
-    display: flex;
-    justify-content: space-between;
-  }
+    display: grid;
+    grid-template-columns: repeat(3,1fr );
+}
 
-  .card-news {
-    width: 27vw;
-  }
+.card-news {
+    width: 100%;
+}
 
-  /* Guru */
-  
-  .card-img-overlay-guru {
+
+/* Guru */
+
+.guru h2 {
+    color: var(--color-primary);
+}
+
+.wrapper-guru {
+    display: grid;
+    grid-template-columns: repeat(6,1fr );
+}
+
+.card-guru {
+    width: 100%;
+}
+
+.card-img-overlay-guru {
     position: absolute;
     /* top: 0; */
     right: 0;
@@ -283,229 +339,145 @@
     left: 0;
     padding: 1rem;
     border-radius: calc(0.25rem - 1px);
-  }
-
-  .card-body-guru {
+}
+.card-body-guru {
     border-radius: calc(0.4rem);
     padding: 0.4rem;
-  }
+}
 
-  .wrapper-guru {
-    display: flex;
-    
-  }
-
-  .card-guru {
-    width: 15vw;
-  }
-  
-
-  .guru h2 {
-    color: var(--color-primary);
-  }
-  
-  .row .guru a {
-    text-decoration: none;
-    margin-top: 28px;
-  }
-  
-  .row .guru a:hover {
-    color: var(--color-yellow);
-  }
+.card-title {
+  font-size: 1rem;
+}
 
 
-  
-  .guru-all{
-    color:var(--color-grey) ;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 9px;
-    line-height: 30px;
-    text-decoration: none;
-    border: 2px solid var(--color-primary);
-    color: var(--color-primary);
-    display: block;
-    border-radius: 10px;
-    width: 30%;
-   
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    /* position: relative; */
-    margin-top: 15px;
-    text-align: center;
-    font-size: 25px;
-    /* font-weight: bold; */
+section.mou {
+    margin-top: 50px;
+}
+
+.mou hr {
+    border-top: 4px solid var(--color-yellow);
     margin-left: auto;
     margin-right: auto;
-  }
-  
-  .row.guru a:hover {
-    color: var(--color-yellow);
-  
-  }
-  
-  
-  section.mou {
-    margin-top: 50px;
-     
-   }
-  
-  .mou hr {
-    border-top: 4px solid var(--color-yellow);
-    margin-left: auto;
-   margin-right: auto;
-   width: 220px;
-  }
-  
-  
-  
-  .logo-mou {
+    width: 220px;
+}
+
+.wrapper-logo-mou {
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-  }
-  
-  .logo-mou div {
-    width: 160px;
-    height: 160px;
-    border-radius: 145px;
-    margin: 20px;
-    left: 45px;
-    top: 3010px;
+
+}
+
+.logo-mou {
+    margin: 0.3rem;
+    height: 7rem;
+    width: 7rem;
+    background-color: crimson;
+
+}
+
+
+.wrapper-maps {
     display: flex;
-    background-color: var(--color-red);
-    margin-left: px;
+    justify-content: center;
+    align-items: center;
   }
-  
-  /* .mapss {
-    width: 470px;
-  } */
-  
-  
-  .kontak hr {
-    border-top: 4px solid var(--color-yellow);
-    margin-left: auto;
-   margin-right: auto;
-   width: 220px;
+
+  .maps {
+      width: 100%;
   }
-  
-  .kontak {
-    min-height: 1150px;
-  }
-  
-  .info-sekolah{
-      color:var(--color-grey) ;
-      font-family: Verdana, Geneva, Tahoma, sans-serif;
-      font-size: 20px;
-      line-height: 30px;
-      text-decoration: none;
-  
-  }
-  
-  /* Footer */
-  
-  
-  
-  footer {
+
+.kontak {
+    height: 100vh;
+}
+
+.info-sekolah {
+    color: var(--color-grey);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20px;
+    line-height: 30px;
+    text-decoration: none;
+}
+
+/* Footer */
+
+footer {
     position: absolute;
     bottom: 0;
     width: 100%;
     height: 459px;
     background-color: var(--color-primary);
     padding-top: 29px;
-  }
-  
-  footer a:hover {
+}
+
+footer a:hover {
     color: var(--color-yellow);
-   
-  }
-  
-  /* Akhir Footer */
-  
-  .header .navbar ul li a:hover {
+}
+
+/* Akhir Footer */
+
+.header .navbar ul li a:hover {
     color: var(--color-yellow);
-  }
-  .nav-item a:hover {
+}
+.nav-item a:hover {
     color: var(--color-yellow);
-  }
-  
-  .copy {
+}
+
+.copy {
     font-size: 19px;
-  }
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  /* Responsive Breakpoint */
-  
-  @media only screen and (max-width: 899px) {
+}
+
+/* Responsive Breakpoint */
+@media only screen and (max-width: 899px) {
     html {
-      font-size: 85%;
+        font-size: 85%;
     }
-    .col-sm-7 img {
-      width: 398px;
-      align-items: center;
-      justify-content: center;
-  
-      
-      
+
+    .wrapper-jurusan {
+        grid-template-columns: repeat(3,1fr);
     }
-  
-   footer {
-     height: 699px;
-   }
-  
-   .logos{
-     width: 70px;
-     height: 90px;
-  
-   }
-  
-   .kontak {
-    min-height: 1700px;
-  }
-  
-  .guru-all {
-    width: 40%;
-  }
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  }
-  
-  @media only screen and (max-width: 360px) {
-  
-    html{
-      font-size: 55%;
-  }
-  
-    .kotak-jurusan {
-      grid-template-columns: 1fr 1fr;
-      
-   }
-  
-   .kotak-jurusan div {
-    width: 160px;
-    height: 120px;
-    margin-top: 50px;
-  }
-  }
+
+    .card-jurusan {
+        padding: 1rem;
+    }
+
+    .wrapper-card-news {
+        grid-template-columns: repeat(2,1fr );
+    }
+    
+    .card-title {
+        text-align: center;
+        font-size: 1rem;
+    }
+
+    .wrapper-guru {
+        grid-template-columns: repeat(3,1fr );
+    }
+
+    .wrapper-jurusan {
+        grid-template-columns: repeat(3, 1fr);
+        gap: 0.1em;
+    }
+
+    .maps {
+        width: 90%;
+        margin: auto;
+    }
+
+   
+}
+
+@media only screen and (max-width: 500px) {
+    html {
+        font-size: 55%;
+    }
+
+    .wrapper-card-news {
+        gap: 1rem;
+        display: grid;
+        grid-template-columns: repeat(2,1fr );
+    }
+
+
+}
